Bootstrap Byte-Buddy-Agent